--- a/amber.html
+++ b/amber.html
@@ -48,7 +48,7 @@
 						<div class="inner">
 						       <h1 align = "center" >Amber Radiance 1 Camera Images</h1>
 						    
-						       <p> Someone found a very old Amber Radiance 1 staring camera, there is very little documentation on it, and I've been pointing it at various things to see how it works. The camera is sensitive from 3 to 5 microns, cools itself on closed-loop system, and produces video from readouts on its InSb array. Below is an image of a field at UCSC and am image of the half full Moon.</p>
+						       <p> Someone found a very old Amber Radiance 1 staring camera, there is very little documentation on it, and I've been pointing it at various things to see how it works. The camera is sensitive from 3 to 5 microns, cools itself on closed-loop system, and produces video from readouts on its InSb array. Below is an image of a field at UCSC and an image of the half full Moon.</p>
 
 						       
 						       <span class="image main"><img src="images/meadow.png" alt=""/></span>
