--- a/methane.html
+++ b/methane.html
@@ -50,7 +50,7 @@
 						    
 						       <p> Studying isolated and wide-separation brown dwarfs is extremely useful for predicting and interpreting the atmospheric properties we may see with future observations of directly imaged exoplanets. Observations of brown dwarfs can also help set the basic requirements for future exoplanet-focused instruments. </p>
 
-						       <p> PSO 318.5 and VHS 1256 b are brown dwarfs that share the same color-space as the HR 8799 planets. Both objects are cold enough to have methane in their atmospheres, yet their near-infrared spectra show no evidence of it. I used Keck/NIRSPEC to take medium resolution L band spectra of PSO 318.5 and VHS 1256 b and detected very shallow methane features compared to normal brown dwarfs. Their atmospheres are out of chemical equilibrium and the synthetic L band photometry implies that HR 8799 c and d have methane in their atmospheres. </p>
+						       <p> PSO 318.5 and VHS 1256 b are brown dwarfs that share the same color-space as the HR 8799 planets. Both objects are cold enough to have methane in their atmospheres, yet their near-infrared spectra show no evidence of it. I used Keck/NIRSPEC to take medium resolution L band spectra of PSO 318.5 and VHS 1256 b and detected methane features which are very shallow relative to normal brown dwarfs. Their atmospheres are out of chemical equilibrium and the synthetic L band photometry implies that HR 8799 c and d may have methane in their atmospheres. </p>
 
 						       <p>You can read the paper <a href = "https://ui.adsabs.harvard.edu/#abs/2018arXiv181004684M/abstract"> here </a>.</p>
 
