--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<img src="images/bem_3to5.png" alt="" />
 									</span>
 									<a href="amber.html">
-										<h2>3 - 5 Micron Images @ UCSC</h2>
+										<h2>3 - 5 Micron Images at UCSC</h2>
 										<div class="content">
 											<p> </p>
 										</div>
