--- a/variety.html
+++ b/variety.html
@@ -51,8 +51,9 @@
 						    <br />What  Happened - Hillary Clinton
 						    <br />Chemistry - Weike Wang
 						    <br />Hunger - Roxane Gay
-						    <br /> All About Love - bell hooks
-						    <br /> *Becoming - Michelle Obama
+						    <br />All About Love - bell hooks
+						    <br />Becoming - Michelle Obama
+						    <br />*The Revolt of the Black Athlete - Harry Edwards
 						  </p>
 
 						  <span class="image main"><img src="images/1.jpg" alt="" /></span>
