--- a/variety.html
+++ b/variety.html
@@ -53,7 +53,8 @@
 						    <br />Hunger - Roxane Gay
 						    <br />All About Love - bell hooks
 						    <br />Becoming - Michelle Obama
-						    <br />*The Revolt of the Black Athlete - Harry Edwards
+						    <br />The Revolt of the Black Athlete - Harry Edwards
+						    <br />Kindred - Octavia Butler
 						  </p>
 
 						  <span class="image main"><img src="images/1.jpg" alt="" /></span>
