--- a/variety.html
+++ b/variety.html
@@ -46,15 +46,16 @@
 				<!-- Main -->
 					<div id="main">
 					  <div class="inner">
-						  <p>
-						    <br />Americanah - Chimamanda Ngozi Adichie
-						    <br />What  Happened - Hillary Clinton
-						    <br />Chemistry - Weike Wang
-						    <br />Hunger - Roxane Gay
-						    <br />All About Love - bell hooks
-						    <br />Becoming - Michelle Obama
-						    <br />The Revolt of the Black Athlete - Harry Edwards
+					          <p>
+					            <br />Algorithms of Oppression - Safiya Umoja Noble*
 						    <br />Kindred - Octavia Butler
+						    <br />The Revolt of the Black Athlete - Harry Edwards
+						    <br />Becoming - Michelle Obama
+						    <br />All About Love - bell hooks
+						    <br />What  Happened - Hillary Clinton
+						    <br />Hunger - Roxane Gay
+						    <br />Chemistry - Weike Wang
+						    <br /> Americanah - Chimamanda Ngozi Adichie
 						  </p>
 
 						  <span class="image main"><img src="images/1.jpg" alt="" /></span>
