--- a/variety.html
+++ b/variety.html
@@ -47,7 +47,9 @@
 					<div id="main">
 					  <div class="inner">
 					          <p>
-					            <br />Algorithms of Oppression - Safiya Umoja Noble*
+					            <br />Parable of the Sower - Octavia Butler*
+						    <br />Stepping Off the Relationship Escalator - Amy Gahran 
+						    <br />Algorithms of Oppression - Safiya Umoja Noble
 						    <br />Kindred - Octavia Butler
 						    <br />The Revolt of the Black Athlete - Harry Edwards
 						    <br />Becoming - Michelle Obama
