--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-						  <li><a href="index.html">Home</a></li>
-						  <li><a href="variety.html">Extras</a></li>
+						        <li><a href="index.html">Home</a></li>
+						        <li><a href="variety.html">Extras</a></li>
 							<!-- <li><a href="generic.html">Ipsum veroeros</a></li> -->
 							<!-- <li><a href="generic.html">Tempus etiam</a></li> -->
 							<!-- <li><a href="generic.html">Consequat dolor</a></li> -->
@@ -56,6 +56,28 @@
 							  
 							</header>
 							<section class="tiles">
+							        <article class="style4">
+									<span class="image">
+										<img src="images/red_dewar.png" alt="" />
+									</span>
+									<a href="ten_micron.html">
+										<h2>10 Micron Detector Testing</h2>
+										<div class="content">
+											<p>TBD</p>
+										</div>
+									</a>
+								</article>
+							        <article class="style3">
+									<span class="image">
+										<img src="images/ty_dwarf.png" alt="" />
+									</span>
+									<a href="carbonmonoxide.html">
+										<h2>Disequilibrium CO Chemistry in the Coldest Brown Dwarfs</h2>
+										<div class="content">
+											<p>M-Band Spectroscopy of late T and Y dwarfs</p>
+										</div>
+									</a>
+								</article>
 								<article class="style1">
 									<span class="image">
 										<img src="images/l_dwarf.png" alt="" />
@@ -72,7 +94,7 @@
 										<img src="images/bem_3to5.png" alt="" />
 									</span>
 									<a href="amber.html">
-										<h2>3 - 5 Micron Images at UCSC</h2>
+										<h2>3 - 5 Micron Images @ UCSC</h2>
 										<div class="content">
 											<p> </p>
 										</div>
