--- a/variety.html
+++ b/variety.html
@@ -46,8 +46,10 @@
 				<!-- Main -->
 					<div id="main">
 					  <div class="inner">
-					          <p>
-					            <br />Parable of the Sower - Octavia Butler*
+					    <p>
+					            <br />Progressive Dystopia: Abolition, Antiblackness, and Schooling in San Francisco - Savannah Shange*
+					            <br />Love's Not Color Blind: Race and Representation in Polyamorous and Other Alternative Communities  - Kevin A. Patterson
+					            <br />Parable of the Sower - Octavia Butler
 						    <br />Stepping Off the Relationship Escalator - Amy Gahran 
 						    <br />Algorithms of Oppression - Safiya Umoja Noble
 						    <br />Kindred - Octavia Butler
