main page update
main page update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="ten_micron.html">
 										<h2>10 Micron Detector Testing</h2>
 										<div class="content">
-											<p>TBD</p>
+											<p>Feasibilty of HgCdTe detectors for Exo-Earth Science</p>
 										</div>
 									</a>
 								</article>
