--- a/index.html
+++ b/index.html
@@ -1,249 +1,130 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Brittany Miles, Astronomy Grad Student</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+<title>Brittany E. Miles, Astronomer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<style>
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+body  {
+  font-family: Roboto, sans-serif;
+  background-color: #eeeeee;
+}
+
+h1, h2, h3, h4, h5, h6, h7 {
+  font-family: Roboto, sans-serif;
+  color: #043b67;
+}
+
+p {
+  font-family: Roboto, sans-serif;
+color: #043b67;
+max-width:550px
+}
+
+/* Style the header */
+.header {
+  font-family: Roboto, sans-serif;
+  padding: 20px;
+}
+
+/* Left and right column */
+.column.side {
+  width: 70%;
+}
 
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+/* mouse over link */
+a:hover {
+  color: #dd640a;
+}
 
-						</div>
-					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-						  <li><a href="index.html">Home</a></li>
-						  <li><a href="gratitude.html">Gratitude</a></li>
-							<!-- <li><a href="generic.html">Ipsum veroeros</a></li> -->
-							<!-- <li><a href="generic.html">Tempus etiam</a></li> -->
-							<!-- <li><a href="generic.html">Consequat dolor</a></li> -->
-							<!-- <li><a href="elements.html">Elements</a></li> -->
-						</ul>
-					</nav>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #eeeeee;
+}
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Brittany E. Miles<br /></h1>
-								<p>I am a Eugene Cota-Robles and NSF Graduate Fellow in the Astronomy and Astrophysics Department at UC Santa Cruz. I am interested in brown dwarfs, exoplanets, and instrumentation. I mainly work with mid-infrared spectroscopy to understand the atmospheres of brown dwarfs and gas giant exoplanets.</p>
+li {
+  float: left;
+}
 
-								<p><a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc"> <b>Publications</b> </a> &nbsp; &nbsp; &nbsp;  <a href ="files/CVBEM.pdf"> <b>CV</b> </a>  &nbsp; &nbsp; &nbsp; <a href ="mailto:bmiles@ucsc.edu"> <b>Email</b> </a> </p>
-							  
-							  
-							</header>
-							<section class="tiles">
-							        <article class="style4">
-									<span class="image">
-										<img src="images/red_dewar.png" alt="" />
-									</span>
-									<a href="ten_micron.html">
-										<h2>10 Micron Detector Testing</h2>
-										<div class="content">
-											<p>Feasibilty of HgCdTe detectors for Exo-Earth Science</p>
-										</div>
-									</a>
-								</article>
-							        <article class="style3">
-									<span class="image">
-										<img src="images/ty_dwarf.png" alt="" />
-									</span>
-									<a href="carbonmonoxide.html">
-										<h2>Disequilibrium CO Chemistry in the Coldest Brown Dwarfs</h2>
-										<div class="content">
-											<p>M-Band Spectroscopy of late T and Y dwarfs</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/l_dwarf.png" alt="" />
-									</span>
-									<a href="methane.html">
-										<h2>Methane in Analogs of Young Directly Imaged Exoplanets</h2>
-										<div class="content">
-											<p>L-Band Spectroscopy of PSO 318.5 and VHS 1256 b</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/bem_3to5.png" alt="" />
-									</span>
-									<a href="amber.html">
-										<h2>3 - 5 Micron Images @ UCSC</h2>
-										<div class="content">
-											<p> </p>
-										</div>
-									</a>
-								</article>
-								<!-- <article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultraviolet Work</h2>
-										<div class="content">
-											<p>Words</p>
-										</div>
-									</a>
-								</article> -->
-									<!-- <article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> 
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-							 </article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> -->
-							</section>
-						</div>
-					</div>
+li a {
+  display: block;
+  color: #043b67;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<!-- <section> -->
-							  <!-- <a href =""> <h2>Contact</h2> </a> -->
-									<!-- <ul class="icons"> -->
-									<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>-->
-									<!-- <li><a href="" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li> -->
-								<!-- </ul> -->
-							<!-- </section> -->
-							<ul class="copyright">
-								<li>Design: Phantom <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+li a:hover {
+  background-color: #bbb9b9;
+}
 
-			</div>
+li {
+  border-right: 1px solid #bbb;
+}
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+li:last-child {
+  border-right: none;
+}
 
-	</body>
-</html>
+
+
+
+
+</style>
+<body>
+
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="CVBEM.pdf">CV</a></li>
+  <li><a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc">Publications</a></li>
+  <li><a href ="mailto:bmiles@ucsc.edu">Email</a></li>
+</ul>
+
+<div class="header">
+  <h1>Dr. Brittany E. Miles</h1>
+  <h7><b>
+	UC Presidential Postodoctoral Fellow at UC Irvine </b> <br>
+	51 Pegasi b Fellow at the University of Arizona (starting October 2022) <br>
+        University of Arizona Presidential Postdoctoral Fellow (starting October 2022)
+  </h7>
+</div>
+
+
+
+
+<div class="column side w3-container w3-padding-16">
+
+ <h5><b>Education</b></h5>
+
+  <p>
+  
+    PhD, Astronomy & Astrophysics, UC, Santa Cruz, 2022<br>
+    M.S., Astronomy & Astrophysics, UC, Santa Cruz, 2018<br>
+    B.S., Physics, Geophysics and Planetary Physics Minor, UCLA, 2016
+    <br>
+    <br></p>
+
+   
+<h5><b>Research Interests</b></h5>
+<p>I primarily work with mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and gas giant exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a postdoc in Professor Steph Sallum's group at UC Irvine, then will be transitioning to the University of Arizona to work in Professor Daniel Apai's group in October. </p>
+
+
+<h5><b>Projects</b></h5>
+
+<p><a href="#soon" style="text-decoration:none">&#10687 The 1 - 20 Micron Spectrum of VHS 1256b</a></p>
+<p><a href="ten_micron.html" style="text-decoration:none">&#10687 10 Micron Detector Testing</a></p>
+<p><a href="carbonmonoxide.html" style="text-decoration:none">&#10687 Disequilibrium CO in the Coldest Brown Dwarfs</a></p>
+<p><a href="methane.html" style="text-decoration:none">&#10687 Methane in Young, Exoplanet Analogs</a></p>
+
+</div>
+
+</body>
+</html> 
