--- a/carbonmonoxide.html
+++ b/carbonmonoxide.html
@@ -1,98 +1,116 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>M-Band Observations of the Coldest Brown Dwarfs</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+<title>M-Band Observations of the Coldest Brown Dwarfs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<style>
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+body  {
+  font-family: Roboto, sans-serif;
+  background-color: #eeeeee;
+}
+
+h1, h2, h3, h4, h5, h6, h7 {
+  font-family: Roboto, sans-serif;
+  color: #043b67;
+}
+
+p {
+  font-family: Roboto, sans-serif;
+color: #043b67;
+max-width:600px
+}
+
+/* Style the header */
+.header {
+  font-family: Roboto, sans-serif;
+  padding: 20px;
+}
+
+/* Left and right column */
+.column.side {
+  width: 70%;
+}
 
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+/* mouse over link */
+a:hover {
+  color: #dd640a;
+}
 
-						</div>
-					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<!-- <li><a href="generic.html">Ipsum veroeros</a></li> -->
-							<!-- <li><a href="generic.html">Tempus etiam</a></li> -->
-							<!-- <li><a href="generic.html">Consequat dolor</a></li> -->
-							<!-- <li><a href="elements.html">Elements</a></li> -->
-						</ul>
-					</nav>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #eeeeee;
+}
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-						       <h1 align = "center" >M-Band Observations of the Coldest Brown Dwarfs</h1>
+li {
+  float: left;
+}
 
-						       <p>Cold brown dwarfs are excellent analogs of widely separated, gas giant exoplanets, and provide insight into the potential atmospheric chemistry and physics we may encounter in objects discovered by future direct imaging surveys.  For this project we completed a low resolution (R∼300) M-band spectroscopic sequence of seven brown dwarfs with effective temperatures between 750 K and 250 K along with Jupiter. These spectra reveal disequilibrium abundances of carbon monoxide (CO), which are produced by atmospheric quenching driven by convection.  We estimated the strength of vertical mixing from the CO abundances by calculating the eddy diffusion coefficient (K<sub>zz</sub>) for each brown dwarf and Jupiter. The K<sub>zz</sub> values of cooler objects are close to their theoretical maximum and warmer objects show weaker mixing, likely due to less efficient convective mixing in primarily radiative layers. The CO-derived K<sub>zz</sub> values imply that disequilibrium phosphine (PH<sub>3</sub>) should be easily observable in all of the brown dwarfs, but none show any evidence for PH<sub>3</sub> absorption.  We find that ammonia (NH<sub>3</sub>) is relatively insensitive to atmospheric quenching at these effective temperatures.</p>
+li a {
+  display: block;
+  color: #043b67;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
-						       <p>You can read the paper and get the spectra <a href = "https://ui.adsabs.harvard.edu/abs/2020arXiv200410770M/abstract"> here </a>.</p>
+li a:hover {
+  background-color: #bbb9b9;
+}
 
-						    
+li {
+  border-right: 1px solid #bbb;
+}
 
-						       <p style="text-align:center;"><img src="images/m_band_sequence.png" alt="M Band Sequence" width="420" height="1200"/></p>
+li:last-child {
+  border-right: none;
+}
 
-						       <p style="text-align:center;"><iframe src="https://open.spotify.com/embed/track/2EznBGrlmx9wBeYgyDojsA" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p>
-							
-						</div>
-					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-						  <section>
-						          <a href ="index.html"> <h2>Home</h2> </a>
-							  <a href ="mailto:bmiles@ucsc.edu"> <h2>Email</h2> </a>
-							  <a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc"> <h2>Publications</h2> </a>
-									<!-- <ul class="icons"> -->
-									<!-- <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li> -->
-									<!-- <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>-->
-									<!-- <li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>-->
-									<!-- <li><a href="" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li> -->
-								<!-- </ul> -->
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: Phantom <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
 
-			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+</style>
+<body>
+
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="CVBEM.pdf">CV</a></li>
+  <li><a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc">Publications</a></li>
+  <li><a href ="mailto:bmiles@ucsc.edu">Email</a></li>
+</ul>
+
+
+
+<div class="column side w3-container w3-padding-16">
+
+<h3>M-Band Observations of the Coldest Brown Dwarfs</h3>
+
+<p>Cold brown dwarfs are excellent analogs of widely separated, gas giant exoplanets, and provide insight into the potential atmospheric chemistry and physics we may encounter in objects discovered by future direct imaging surveys.  For this project we completed a low resolution (R∼300) M-band spectroscopic sequence of seven brown dwarfs with effective temperatures between 750 K and 250 K along with Jupiter. These spectra reveal disequilibrium abundances of carbon monoxide (CO), which are produced by atmospheric quenching driven by convection.  We estimated the strength of vertical mixing from the CO abundances by calculating the eddy diffusion coefficient (K<sub>zz</sub>) for each brown dwarf and Jupiter. The K<sub>zz</sub> values of cooler objects are close to their theoretical maximum and warmer objects show weaker mixing, likely due to less efficient convective mixing in primarily radiative layers. The CO-derived K<sub>zz</sub> values imply that disequilibrium phosphine (PH<sub>3</sub>) should be easily observable in all of the brown dwarfs, but none show any evidence for PH<sub>3</sub> absorption.  We find that ammonia (NH<sub>3</sub>) is relatively insensitive to atmospheric quenching at these effective temperatures.</p>
+
+<p>You can read the paper and get the spectra <a href = "https://ui.adsabs.harvard.edu/abs/2020arXiv200410770M/abstract"> here. </a></p>
+
+
+<span class="image main"><img src="images/m_band_sequence.png" width="600" alt=""/></span>
+
+<p style="text-align:center;"><iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2EznBGrlmx9wBeYgyDojsA?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe></p>
+
+
+
+
+
+
+</div>
+
+
+
+</body>
+</html> 
