--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ li:last-child {
 <div class="header">
   <h1>Dr. Brittany E. Miles</h1>
   <h7><b>
-	UC Presidential Postodoctoral Fellow at UC Irvine </b> <br>
+	UC Presidential Postdoctoral Fellow at UC Irvine </b> <br>
 	51 Pegasi b Fellow at the University of Arizona (starting October 2022) <br>
         University of Arizona Presidential Postdoctoral Fellow (starting October 2022)
   </h7>
