--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@ li:last-child {
 
 <div class="header">
   <h1>Dr. Brittany E. Miles</h1>
-  <h7><b>
-	UC Presidential Postdoctoral Fellow at UC Irvine </b> <br>
-	51 Pegasi b Fellow at the University of Arizona (starting October 2022) <br>
-        University of Arizona Presidential Postdoctoral Fellow (starting October 2022)
+  <h7><b>51 Pegasi b Fellow and Presidential Postdoctoral Fellow at the University of Arizona</b> <br>
   </h7>
 </div>
 
