--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ li:last-child {
 
    
 <h5><b>Research Interests</b></h5>
-<p>I primarily work with mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and gas giant exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a postdoc in Professor Steph Sallum's group at UC Irvine, then will be transitioning to the University of Arizona to work in Professor Daniel Apai's group in October. </p>
+<p>I primarily work with mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and gas giant exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a postdoc at the University of Arizona in Professor Daniel Apai's group. </p>
 
 
 <h5><b>Projects</b></h5>
