--- a/index.html
+++ b/index.html
@@ -113,11 +113,15 @@ li:last-child {
 <h5><b>Research Interests</b></h5>
 <p>I primarily work with mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and gas giant exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a postdoc at the University of Arizona in Professor Daniel Apai's group. </p>
 
+<h5><b>Current Projects</b></h5>
+<p><a href="#soon" style="text-decoration:none">&#10687 Mapping 1-D Mixing Profiles of Brown Dwarfs with JWST</a></p>
+ 
+ <p><a href="#soon" style="text-decoration:none">&#10687 The 1 - 20 Micron Spectrum of VHS 1256b</a></p>
 
-<h5><b>Projects</b></h5>
+ <p><a href="ten_micron.html" style="text-decoration:none">&#10687 10 Micron Detector Testing</a></p>
 
-<p><a href="#soon" style="text-decoration:none">&#10687 The 1 - 20 Micron Spectrum of VHS 1256b</a></p>
-<p><a href="ten_micron.html" style="text-decoration:none">&#10687 10 Micron Detector Testing</a></p>
+
+<h5><b>Past Projects</b></h5>
 <p><a href="carbonmonoxide.html" style="text-decoration:none">&#10687 Disequilibrium CO in the Coldest Brown Dwarfs</a></p>
 <p><a href="methane.html" style="text-decoration:none">&#10687 Methane in Young, Exoplanet Analogs</a></p>
 
