--- a/ten_micron.html
+++ b/ten_micron.html
@@ -85,7 +85,7 @@ li:last-child {
   <li><a href="index.html">Home</a></li>
   <li><a href="CVBEM.pdf">CV</a></li>
   <li><a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc">Publications</a></li>
-  <li><a href ="mailto:bmiles@ucsc.edu">Email</a></li>
+  <li><a href ="mailto:bemiles@arizona.edu">Email</a></li>
 </ul>
 
 
@@ -94,12 +94,14 @@ li:last-child {
 
 <h3>10 Micron Detector Testing</h3>
 
-<p>The 8 - 13 micron region of the infrared is important for directly imaging Earth-like planets around Solar type stars because the best contrast for a rocky body is achieved within this wavelength range. Important molecular gases can also be detected in this wavelength regime at very low resolutions. I am testing a 1024 by 1024 HgCdTe array with a wavelength cutoff of 12.8 microns for potential use in ground-based instruments that are focused on detecting and characterizing exoplanets. We have taken fast read out images with the detector at room temperature, ~90 K, and ~60K. Due to liquid helium shortages, I have not been able to order the cryogens required to reach temperatures where the detector best operates while at Santa Cruz.</p>
+<p>The 8 - 13 micron region of the infrared is important for directly imaging Earth-like planets around Solar type stars because the best contrast for a rocky body is achieved within this wavelength range. Important molecular gases can also be detected in this wavelength regime at very low resolutions. I am testing a 1024 by 1024 HgCdTe array with a wavelength cutoff of 12.8 microns for potential use in ground-based instruments that are focused on detecting and characterizing exoplanets. We have taken fast read out images with the detector at room temperature, ~90 K, and ~60K. </p>
 
-<p>The project used the former Keck Angle Tracker dewar. The previous filter wheel and mechanical turn were the only original internal parts kept in the dewar. The filter wheel slots were fitted with new holders and spacers to hold smaller, new filters and infrared blockers. A new L-brakcet shaped mount is used to hold a gold-coated, aluminum mirror that can pivot slightly around a ball. The current dewar window is a flat piece of fused silica and will eventually get replaced by a plano-convex ZnSe lens. The ultimate goal is to have a simple reimaging system that can capture images within two narrow bandpasses (2.3 and 5.3  microns) and two broad filters centered at 10.0 and 10.6 microns.</p>
+  <p>Due to liquid helium shortages, I was not able to order the cryogens required to reach temperatures where the detector best operates for a year while at Santa Cruz. In Fall 2023, liquid helium testing was done, but the readout electronics got too cold due to poor thermal isolation in the system. I have gotten funding to continue testing with a cryocooler system at Steward Observatory in the upcoming 2023-2024 academic year. </p>
+
+<p>The project initially used the former Keck Angle Tracker dewar. The previous filter wheel and mechanical turn were the only original internal parts kept in the dewar. The filter wheel slots were fitted with new holders and spacers to hold smaller, new filters and infrared blockers. A new L-brakcet shaped mount is used to hold a gold-coated, aluminum mirror that can pivot slightly around a ball. The old dewar window is a flat piece of fused silica and got replaced by a plano-convex ZnSe lens. The ultimate goal is to have a simple reimaging system that can capture images within two narrow bandpasses (2.3 and 5.3  microns) and two broad filters centered at 10.0 and 10.6 microns.</p>
 
 
-<p>You can read the paper <a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11823/118230J/Testing-a-10-micron-HgCdTe-detector-for-ground-based-exoplanet/10.1117/12.2594915.short"> here. </a></p>
+<p>You can read the paper summarizing some of the Santa Cruz work <a href = "https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11823/118230J/Testing-a-10-micron-HgCdTe-detector-for-ground-based-exoplanet/10.1117/12.2594915.short"> here. </a></p>
 
 <span class="image main"><img src="images/contrast_curve.png" width="600" alt=""/></span>
 
