--- a/methane.html
+++ b/methane.html
@@ -81,11 +81,13 @@ li:last-child {
 <body>
 
 
+
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="CVBEM.pdf">CV</a></li>
   <li><a href ="https://ui.adsabs.harvard.edu/#search/filter_author_facet_hier_fq_author=OR&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%22%20OR%20author_facet_hier%3A%221%2FMiles%2C%20B%2FMiles%2C%20Brittany%20E%22)&p_=0&q=%20author%3A%22Miles%2C%20Brittany%22&sort=date%20desc%2C%20bibcode%20desc">Publications</a></li>
   <li><a href ="mailto:bemiles@arizona.edu">Email</a></li>
+  <li><a href ="inquiries.html">Research Inquiries</a></li>
 </ul>
 
 
