--- a/about/index.html
+++ b/about/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>Dr. Brittany E. Miles</title>
 <meta name="keywords" content="">
 <meta name="description" content="About I grew up in the Los Angeles area and love my family dearly. I stayed in LA County to complete my bachelor&rsquo;s in Physics and minor in Geophysics and Planetary Physics at UCLA. After, I moved to Santa Cruz to complete my master&rsquo;s and doctorate in Astronomy and Astrophysics. During this time I got over my fear of the water and learned how to swim, eventually gaining the courage of get out on the ocean on a surfboard.">
 <meta name="author" content=" ">
-<link rel="canonical" href="//localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="//localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="//localhost:1313/apple-touch-icon.png">
+<link rel="canonical" href="bemiles.github.io/about/">
+<link crossorigin="anonymous" href="bemiles.github.io/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
+<link rel="icon" href="bemiles.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="bemiles.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="bemiles.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="bemiles.github.io/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="//localhost:1313/about/">
+<link rel="alternate" hreflang="en" href="bemiles.github.io/about/">
 <noscript>
     <style>
         #theme-toggle,
@@ -30,7 +30,7 @@
 </noscript><meta property="og:title" content="" />
 <meta property="og:description" content="About I grew up in the Los Angeles area and love my family dearly. I stayed in LA County to complete my bachelor&rsquo;s in Physics and minor in Geophysics and Planetary Physics at UCLA. After, I moved to Santa Cruz to complete my master&rsquo;s and doctorate in Astronomy and Astrophysics. During this time I got over my fear of the water and learned how to swim, eventually gaining the courage of get out on the ocean on a surfboard." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="//localhost:1313/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="bemiles.github.io/about/" /><meta property="article:section" content="" />
 
 
 
@@ -48,7 +48,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "",
-      "item": "//localhost:1313/about/"
+      "item": "bemiles.github.io/about/"
     }
   ]
 }
@@ -74,14 +74,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "//localhost:1313/about/"
+    "@id": "bemiles.github.io/about/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "Dr. Brittany E. Miles",
     "logo": {
       "@type": "ImageObject",
-      "url": "//localhost:1313/favicon.ico"
+      "url": "bemiles.github.io/favicon.ico"
     }
   }
 }
@@ -123,9 +123,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="//localhost:1313/" accesskey="h" title="Dr. Brittany E. Miles">
+            <a href="bemiles.github.io/" accesskey="h" title="Dr. Brittany E. Miles">
              
-                <img src="//localhost:1313/sunflower.ico" alt="" aria-label="logo"
+                <img src="bemiles.github.io/sunflower.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Dr. Brittany E. Miles</a>
             <div class="logo-switches">
@@ -135,12 +135,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="//localhost:1313/projects/" title="Projects">
+                <a href="bemiles.github.io/projects/" title="Projects">
                     <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/CV_BEM_03182024.pdf" title="CV">
+                <a href="bemiles.github.io/CV_BEM_03182024.pdf" title="CV">
                     <span>CV</span>
                 </a>
             </li>
