--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     CV
                 </span>
             </a>
-            <a class="button" href="https://infraredastronomy.tumblr.com/" rel="noopener" title="The Research Garden">
+            <a class="button" href="https://infraredastronomy.tumblr.com/"title="The Research Garden">
                 <span class="button-inner">
                     The Research Garden&nbsp;
                     <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
