--- a/public/projects/paper1/index.html
+++ b/public/projects/paper1/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
 <title>Disequilibrium CO Chemistry in the Coldest Brown Dwarfs | Dr. Brittany E. Miles</title>
 <meta name="keywords" content="">
 <meta name="description" content="Bridging the gap between chemistry in the coldest brown dwarfs and Solar System gas giant planets.">
 <meta name="author" content="Brittany Miles">
-<link rel="canonical" href="bemiles.github.io/projects/paper1/">
-<link crossorigin="anonymous" href="bemiles.github.io/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="bemiles.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="bemiles.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="bemiles.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="bemiles.github.io/apple-touch-icon.png">
+<link rel="canonical" href="//localhost:1313/projects/paper1/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.ceedb4bfad9c836660a1794574b00e044af05e0e43d78e579aecd60de809fae9.css" integrity="sha256-zu20v62cg2ZgoXlFdLAOBErwXg5D145XmuzWDegJ&#43;uk=" rel="preload stylesheet" as="style">
+<link rel="icon" href="//localhost:1313/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="//localhost:1313/apple-touch-icon.png">
 
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="bemiles.github.io/projects/paper1/">
+<link rel="alternate" hreflang="en" href="//localhost:1313/projects/paper1/">
 <noscript>
     <style>
         #theme-toggle,
@@ -30,7 +30,7 @@
 </noscript><meta property="og:title" content="Disequilibrium CO Chemistry in the Coldest Brown Dwarfs" />
 <meta property="og:description" content="Bridging the gap between chemistry in the coldest brown dwarfs and Solar System gas giant planets." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="bemiles.github.io/projects/paper1/" /><meta property="article:section" content="projects" />
+<meta property="og:url" content="//localhost:1313/projects/paper1/" /><meta property="article:section" content="projects" />
 
 
 
@@ -48,13 +48,13 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "Papers",
-      "item": "bemiles.github.io/projects/"
+      "item": "//localhost:1313/projects/"
     }, 
     {
       "@type": "ListItem",
       "position":  2 ,
       "name": "Disequilibrium CO Chemistry in the Coldest Brown Dwarfs",
-      "item": "bemiles.github.io/projects/paper1/"
+      "item": "//localhost:1313/projects/paper1/"
     }
   ]
 }
@@ -80,14 +80,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "bemiles.github.io/projects/paper1/"
+    "@id": "//localhost:1313/projects/paper1/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "Dr. Brittany E. Miles",
     "logo": {
       "@type": "ImageObject",
-      "url": "bemiles.github.io/favicon.ico"
+      "url": "//localhost:1313/favicon.ico"
     }
   }
 }
@@ -129,9 +129,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="bemiles.github.io/" accesskey="h" title="Dr. Brittany E. Miles">
+            <a href="//localhost:1313/" accesskey="h" title="Dr. Brittany E. Miles">
              
-                <img src="bemiles.github.io/sunflower.ico" alt="" aria-label="logo"
+                <img src="//localhost:1313/sunflower.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Dr. Brittany E. Miles</a>
             <div class="logo-switches">
@@ -141,12 +141,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="bemiles.github.io/projects/" title="Projects">
+                <a href="//localhost:1313/projects/" title="Projects">
                     <span>Projects</span>
                 </a>
             </li>
             <li>
-                <a href="bemiles.github.io/CV_BEM_03182024.pdf" title="CV">
+                <a href="//localhost:1313/CV_BEM_03182024.pdf" title="CV">
                     <span>CV</span>
                 </a>
             </li>
