updated public files

--- a/public/group/index.html
+++ b/public/group/index.html
@@ -143,7 +143,7 @@ Animesh Garg (2023 - 2025) &ldquo;Jupiter as an Exoplanet seen by HST&rdquo;"/>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/CV_BEM_08172025.pdf" title="CV">
+                <a href="//localhost:1313/CV_BEM.pdf" title="CV">
                     <span>CV</span>
                 </a>
             </li>
