--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   "description": "I am an astronomy postdoc at the University of Arizona. consequat.",
   "thumbnailUrl": "//localhost:1313/favicon.ico",
   "sameAs": [
-      "CV_BEM_08172025.pdf", "mailto:bemiles@arizona.edu"
+      "CV_BEM.pdf", "mailto:bemiles@arizona.edu"
   ]
 }
 </script>
@@ -90,7 +90,7 @@
             height="200" width="200" />
         <h1>Dr. Brittany E. Miles</h1>
         <span>I use mid-infrared spectroscopy to characterize the atmospheres of brown dwarfs and exoplanets. I want to improve ground-based mid-infrared instruments to characterize existing exoplanets and find Earth-like planets. I am currently a 51 Pegasi b and Presidential Postdoctoral Fellow at the University of Arizona. Fall 2025 I will join the faculty at Steward Observatory as an assistant professor.</span><div class="social-icons">
-    <a href="CV_BEM_08172025.pdf" target="_blank" rel="noopener noreferrer me" title="CV">
+    <a href="CV_BEM.pdf" target="_blank" rel="noopener noreferrer me" title="CV">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <path
         d="M4 4v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.342a2 2 0 0 0-.602-1.43l-4.44-4.342A2 2 0 0 0 13.56 2H6a2 2 0 0 0-2 2z" />
@@ -127,9 +127,14 @@
                     Research Opportunities
                 </span>
             </a>
-            <a class="button" href="CV_BEM_08172025.pdf" rel="noopener" title="CV">
+            <a class="button" href="CV_BEM.pdf" rel="noopener" title="CV">
                 <span class="button-inner">
                     CV
+                </span>
+            </a>
+            <a class="button" href="" rel="noopener" title="Publications">
+                <span class="button-inner">
+                    Publications
                 </span>
             </a>
             <a class="button" href="https://infraredastronomy.tumblr.com/" rel="noopener" title="Blog">
