--- a/public/data/data1/index.html
+++ b/public/data/data1/index.html
@@ -152,7 +152,7 @@
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/CV_BEM_08172025.pdf" title="CV">
+                <a href="//localhost:1313/CV_BEM.pdf" title="CV">
                     <span>CV</span>
                 </a>
             </li>
