--- a/public/projects/paper5/index.html
+++ b/public/projects/paper5/index.html
@@ -146,7 +146,7 @@
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/CV_BEM_08172025.pdf" title="CV">
+                <a href="//localhost:1313/CV_BEM.pdf" title="CV">
                     <span>CV</span>
                 </a>
             </li>
